fix: add missing GET endpoint for director by ID and fix 404 error handling